# 3D-Engine

./: .gitignore  CMakeLists.txt  main.cpp
Engine/Core/: Application.cpp  Application.h
Engine/Graphics/: Skybox.cpp  Skybox.h  camera.cpp  camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
Engine/Input/: Input.cpp  Input.h
Engine/Lua/: ScriptSystem.cpp  ScriptSystem.h
Game/Shaders/: basic.frag  basic.vert  skybox.frag  skybox.vert
